chore: comment out not required config

--- a/roles/setup/tasks/zsh.yml
+++ b/roles/setup/tasks/zsh.yml
@@ -1,5 +1,4 @@
 ---
-
 - name: link dotfiles
   file:
     src: "{{ files_path }}/{{ item }}"
@@ -8,30 +7,29 @@
     force: yes
     follow: false
   loop:
-    - .zshrc 
-    - .zsh_aliases
-    - .p10k.zsh
+    - .zshrc
+    # - .zsh_aliases
+    # - .p10k.zsh
 
 # antibody static loading: https://getantibody.github.io/usage/
-- name: static loading from plugins.txt
-  shell: "antibody bundle < {{ files_path }}/zsh_plugins.txt > ${HOME}/.zsh_plugins"
+# - name: static loading from plugins.txt
+#   shell: "antibody bundle < {{ files_path }}/zsh_plugins.txt > ${HOME}/.zsh_plugins"
 
 - name: Create .zsh directory if it does not exist
   file:
     path: ~/.zsh/completion
     state: directory
-    mode: '0755'
+    mode: "0755"
     recurse: yes
 
 - name: link docker completions
   script: docker-completion.sh
 
 - name: Get zsh path
-  command: which zsh 
+  command: which zsh
   register: zsh_path
 
 - name: Switch to zsh
-  user: 
-    name={{ ansible_user_id }} 
+  user: name={{ ansible_user_id }}
     shell={{ zsh_path.stdout }}
   become: true
