--- a/roles/setup/tasks/main.yml
+++ b/roles/setup/tasks/main.yml
@@ -1,5 +1,4 @@
 ---
-
 - name: set files path
   set_fact:
     files_path: "{{ role_path }}/files"
@@ -16,17 +15,16 @@
   tags:
     - zsh
 
-- name: configure vim and install plugins
-  import_tasks: vim.yml
-  tags:
-    - vim
-
 - name: miscellaneous configuration
   import_tasks: misc.yml
   tags:
     - misc
+# - name: configure vim and install plugins
+#   import_tasks: vim.yml
+#   tags:
+#     - vim
 
-- name: osx defaults
-  import_tasks: osx.yml
-  tags:
-    - osx
+# - name: osx defaults
+#   import_tasks: osx.yml
+#   tags:
+#     - osx
