--- a/roles/setup/tasks/misc.yml
+++ b/roles/setup/tasks/misc.yml
@@ -1,30 +1,5 @@
 ---
-
 # miscellaneous configuration
-
-- name: link iterm config
-  file:
-    src: "{{ files_path }}/com.googlecode.iterm2.plist"
-    dest: "$HOME/Library/Preferences/com.googlecode.iterm2.plist"
-    state: link
-    force: yes
-    follow: false
-
-# - name: create karabiner directory if it does not exist
-#   file:
-#     path: ~/.config/karabiner
-#     state: directory
-#     mode: '0755'
-#     recurse: yes
-
-
-# - name: link karabiner config
-#   file:
-#     src: "{{ files_path }}/karabiner.json"
-#     dest: "$HOME/.config/karabiner/karabiner.json"
-#     state: link
-#     force: yes
-#     follow: false
 
 - name: link git dotfiles
   file:
@@ -34,7 +9,30 @@
     force: yes
     follow: false
 
+# - name: link iterm config
+#   file:
+#     src: "{{ files_path }}/com.googlecode.iterm2.plist"
+#     dest: "$HOME/Library/Preferences/com.googlecode.iterm2.plist"
+#     state: link
+#     force: yes
+#     follow: false
+
+# - name: create karabiner directory if it does not exist
+#   file:
+#     path: ~/.config/karabiner
+#     state: directory
+#     mode: '0755'
+#     recurse: yes
+
+# - name: link karabiner config
+#   file:
+#     src: "{{ files_path }}/karabiner.json"
+#     dest: "$HOME/.config/karabiner/karabiner.json"
+#     state: link
+#     force: yes
+#     follow: false
+
 # - name: install rust if not already installed
 #   command: rustup-init
-#   args: 
+#   args:
 #       creates: ~/.cargo
