--- a/roles/setup/tasks/homebrew.yml
+++ b/roles/setup/tasks/homebrew.yml
@@ -10,7 +10,7 @@
   when: not homebrew_check.stat.exists
   script: install-homebrew.sh
 
-- name: ensure homebrew is updated 
+- name: ensure homebrew is updated
   homebrew:
     state: latest
     update_homebrew: yes
@@ -31,6 +31,5 @@
   homebrew:
     name: "{{ homebrew.packages }}"
     state: present
-
-- name: install fzf keybindings and fuzzy completion
-  shell: $(brew --prefix)/opt/fzf/install
+# - name: install fzf keybindings and fuzzy completion
+#   shell: $(brew --prefix)/opt/fzf/install
